# AutoDiff

./: .coverage  .gitignore  .travis.yml  Autodiff_test.py  LICENSE.md  README.md  codecov.yml  demo.py  dual_temp.py  pyproject.toml  setup.cfg  test_suite.sh  tests.py
docs/: Documentation.ipynb  Milestone2.ipynb  milestone1.md  milestone2.ipynb  milestone2_progress.md
docs/.ipynb_checkpoints/: milestone2-checkpoint.ipynb
src/: Forward.py  Functions.py  Reverse.py  ad_operations.py  benchmarks.py  comp_graph_prototype.py  demo.py  dual_temp.py  graph_tree.py
src/cs107_creativename/: Forward.py  Functions.py  Reverse.py  __init__.py
tests/: test_suite.sh
tests/cs107_creativename_tests/: tests.py
