[metadata]
name = cs107_creativename
version = 0.0.7
author = Adriana, Diana, Varshini, Xiabuo
description = Our package holds a forward and reverse mode implementation for Auto Differentiation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cs107-creativename/cs107-FinalProject
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Mathematics
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy

[options.packages.find]
where = src

